--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node-env-run server --exec nodemon | pino-colada",
+    "server": "nodemon server/index.js | pino-colada",
     "dev": "run-p server start"
   },
   "proxy": "http://localhost:3001/",
@@ -43,6 +43,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "express-pino-logger": "^4.0.0",
