--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node-env-run server --exec nodemon | pino-colada",
+    "server": "nodemon server/index.js | pino-colada",
     "dev": "run-p server start"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -45,10 +45,17 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "express-pino-logger": "^4.0.0",
+    "express-session": "^1.17.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-oauth2": "^1.5.0",
     "pino-colada": "^1.5.1",
     "typescript": "^3.8.3"
   }
