--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.3",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
+    "express-pino-logger": "^4.0.0",
+    "express-session": "^1.17.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "node-env-run": "^3.0.2",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-oauth2": "^1.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -43,19 +47,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.5",
     "awesome-typescript-loader": "^5.2.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-http-proxy": "^1.6.0",
-    "express-pino-logger": "^4.0.0",
-    "express-session": "^1.17.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "passport": "^0.4.1",
-    "passport-github": "^1.1.0",
-    "passport-oauth2": "^1.5.0",
     "pino-colada": "^1.5.1",
     "typescript": "^3.8.3"
   }
