--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
   "compilerOptions": {
     "sourceMap": true,
     "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "module": "esnext",
     "target": "es5",
     "jsx": "react",
     "lib": [
+      "es6",
       "dom",
       "dom.iterable",
       "esnext"
