--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-http-proxy": "^1.6.0",
     "express-pino-logger": "^4.0.0",
     "express-session": "^1.17.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "node-env-run": "^3.0.2",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.4",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
