--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "server": "nodemon server/index.js | pino-colada",
     "dev": "run-p server start"
   },
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
