--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,8 +49,8 @@
         "no-return-await": 1,
         "no-var": 0,
         "quotes": 0,
-        "@typescript-eslint/no-used-vars": 0,
-        "no-used-vars": 0,
+        "@typescript-eslint/no-unused-vars": 0,
+        "no-unused-vars": 0,
         "@typescript-eslint/class-name-casing": 0,
         "lines-between-class_members": 0,
         "@typescript-eslint/ban-ts-ignore": 0,
@@ -62,7 +62,7 @@
         "no-useless-constructor": 0,
         "no-restricted-globals": 0,
         "@typescript-eslint/explicit-function-return-type": 1,
-        "@typescript-eslint/no-use-before-define": 1,
+        "@typescript-eslint/no-use-before-define": 0,
         "no-plusplus": 0,
         "dot-notation": 0,
         "one-var": 0,
