--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
-PORT=3001
+PORT=3000 // client
 WEBAPP_URL=http://localhost:3000/
 SESSION_SECRET=SECRET
 OAUTH_CLIENT_ID=2c29d26a0e4bd9ee8c35
 OAUTH_CLIENT_SECRET=SECRET
 OAUTH_CALLBACK_URL=http://localhost:3001/auth/callback
+SERVER_PORT=3001
