--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport-oauth2": "^1.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sweetalert2": "^9.10.9"
   },
   "scripts": {
     "start": "react-scripts start",
