--- a/example.env
+++ b/example.env
@@ -9,4 +9,5 @@ PG_USERNAME=postgres
 PG_PASSWORD=postgres
 PG_HOST=localhost
 PG_PORT=5432
+PG_DB=jobs
 STATIC_FILES_LOCATION=REALTIVE_TO_SERVER DIR
