--- a/package.json
+++ b/package.json
@@ -58,12 +58,27 @@
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
+    "@types/pg": "^7.14.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-wesbos": "0.0.19",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.5.1",
+    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   }
 }
