End of line auto

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
       {
         "printWidth": 115,
         "tabWidth": 4,
-        "singleQuote": true
+        "singleQuote": true,
+        "endOfLine": "auto"
       }
     ],
     "prefer-const": 1,
