--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "date-fns": "^2.11.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "express-pino-logger": "^4.0.0",
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
+    "mobx-react": "^6.2.0",
     "node-env-run": "^3.0.2",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
