--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server/index.js | pino-colada",
+    "debug": "nodemon --inspect server/index.js | pino-colada",
     "dev": "run-p server start"
   },
   "proxy": "http://localhost:3001",
