--- a/example.env
+++ b/example.env
@@ -10,4 +10,6 @@ PG_PASSWORD=postgres
 PG_HOST=localhost
 PG_PORT=5432
 PG_DB=jobs
+NODE_ENV=development
+CLIENT_UPN=s8182384
 STATIC_FILES_LOCATION=REALTIVE_TO_SERVER DIR
