--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-http-proxy": "^1.6.0",
     "express-pino-logger": "^4.0.0",
     "express-session": "^1.17.0",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.0",
@@ -62,6 +63,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.4",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.27",
