--- a/example.env
+++ b/example.env
@@ -11,3 +11,4 @@ PG_HOST=localhost
 PG_PORT=5432
 PG_DB=jobs
 STATIC_FILES_LOCATION=REALTIVE_TO_SERVER DIR
+WITH_RAMAD_ACCESS=true // for future use in dev
