detrmine type of user acording to env variable

--- a/example.env
+++ b/example.env
@@ -12,4 +12,4 @@ PG_PORT=5432
 PG_DB=jobs
 NODE_ENV=development
 STATIC_FILES_LOCATION=. # REALTIVE_TO_SERVER DIR
-WITH_RAMAD_ACCESS=true # for future use in dev
+WITH_RAMAD_ACCESS=true # use only in development
